SERVER-53184 Crash validate in testing when an index cursor fails to traverse